# tensor-calc

./: .gitignore  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md
src/: einstein.rs  lib.rs  main.rs  symbolic.rs  tensor.rs
