[package]
name = "tensor-calc"
version = "0.1.1"
edition = "2021"
description = "World's first Rust-based Einstein field equation solver with symbolic tensor calculus"
license = "MIT OR Apache-2.0"
repository = "https://github.com/nightness/tensor-calc"
homepage = "https://github.com/nightness/tensor-calc"
documentation = "https://docs.rs/tensor-calc"
keywords = ["physics", "tensor", "einstein", "relativity", "spacetime"]
categories = ["science", "mathematics", "command-line-utilities"]
authors = ["nightness"]
readme = "README.md"

[[bin]]
name = "tensor-calc"
path = "src/main.rs"

[lib]
name = "tensor_calc"
path = "src/lib.rs"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
nalgebra = "0.33"
clap = { version = "4.0", features = ["derive"] }
thiserror = "1.0"
regex = "1.10"
indexmap = "2.0"
petgraph = "0.6"
num-complex = "0.4"
approx = "0.5"

[profile.release]
lto = true
codegen-units = 1
panic = "abort"
